# SFMLTemplate

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
data/Shaders/: blit.p.glsl  blit.v.glsl  lit.p.glsl  lit.v.glsl
data/Statue/: statue.mtl
src/: Application.cpp  Application.hpp  Renderer.cpp  Renderer.hpp  Utility.cpp  Utility.hpp  main.cpp
src/Framework/: Framework.cpp  Framework.hpp  Graphics.cpp  Graphics.hpp  Utility.cpp  Utility.hpp
